# pto-isa-fa

./: .gitignore  ascendc.py  bench_ascendc.py  bench_ptoisa_event.py  fias_kernel_dispatch.md  goals.md  mask_check_torch.py  ptoisa.py
ascendc_ref/: ascendc_design.md  flash_attention_score_s1_bn2gs1.h
flash_atten/: README.md  fa2.cpp  fa2.h  fa2_explained.md  fa_performance_kernel.cpp  fa_performance_kernel.h  jit_util.py  pto_macro_fa_softmax.hpp
old_fa/: .gitignore  bench_ptoisa.py  goals.md  ptoisa.py
old_fa/ascendc_ref/: tiling.cpp
old_fa/flash_atten/: fa2.cpp  fa2.h  jit_util.py  pto_macro_fa_gu.hpp  pto_macro_fa_softmax.hpp
simple/: CMakeLists.txt  README.md  bench_tfa.py  build.sh  fa_performance_kernel.cpp  fa_performance_kernel.h  fa_performance_kernel_t256.cpp  pto_macro_fa_softmax.hpp  tfa_kernel.py  tfa_poc.py  tfa_torch_launch.cpp
simple/utils/: bench.py
